feat: creation form is now functional

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -57,7 +57,7 @@
                         element.style.color = "green";
                         break;
                     case 'medium':
-                        element.style.color = "yellow";
+                        element.style.color = "orange";
                         break;
                     case 'hard':
                         element.style.color = "red";
