--- a/templates/home/newTask.html.twig
+++ b/templates/home/newTask.html.twig
@@ -3,7 +3,7 @@
 {% block title %}NewTask{% endblock %}
 
 {% block body %}
-    <h1>New Task</h1>
+    <h1>Create new task</h1>
 
     {{ form_errors(registrationForm) }}
 
