--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,6 +14,7 @@
                 margin-bottom: 10px;
                 display: flex;
                 justify-content: space-between;
+                align-items: center;
             }
 
             #header{
@@ -47,6 +48,12 @@
                             <span>{{ item.createdAt|date('Y-m-d') }}</span>
                         </div>
                     </div>
+
+                    {% if item.assignedTo %}
+                        <p>This task is assigned to {{ item.assignedTo }}</p>
+                    {% else %}
+                        <p>This task is not assigned !</p>
+                    {% endif %}
 
                     <form method="post" action="{{ path('task_delete', {id: item.id}) }}">
                         <button type="submit">
