--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,6 +15,8 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
+                text-decoration: none;
+                color: black;
             }
 
             #header{
@@ -64,7 +66,7 @@
         </div>
         <div class="news-list">
             {% for item in tasks %}
-                <div class="task-item">
+                <a href="{{ path('task_detail', {id: item.id}) }}" class="task-item">
 
                     <div class="content">
                         <div id="mainInfo">
@@ -82,7 +84,7 @@
                     </div>
 
                     {% if item.assignedTo %}
-                        <p>This task is assigned to {{ item.assignedTo }}</p>
+                        <p>This task is assigned to {{ item.assignedTo.username }}</p>
                     {% else %}
                         <p>This task is not assigned !</p>
                     {% endif %}
@@ -94,7 +96,7 @@
                             </svg>
                         </button>
                     </form>
-                </div>
+                </a>
             {% else %}
                 <p>No tasks yet.</p>
             {% endfor %}
