--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -84,9 +84,13 @@
                     </div>
 
                     {% if item.assignedTo %}
-                        <p>This task is assigned to {{ item.assignedTo.username }}</p>
+                        {% if item.assignedTo.username == username %}
+                            <p>This task is assigned to you</p>
+                        {% else %}
+                            <p>This task is assigned to {{ item.assignedTo.username }}</p>
+                        {% endif %}
                     {% else %}
-                        <p>This task is not assigned !</p>
+                        <p>This task is not assigned!</p>
                     {% endif %}
 
                     <form method="post" action="{{ path('task_delete', {id: item.id}) }}">
