--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -17,6 +17,7 @@
                 align-items: center;
                 text-decoration: none;
                 color: black;
+                padding: 5px;
             }
 
             #header{
