--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -15,6 +15,9 @@
         {% endif %}
 
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        Don't have an account ? <a href="/register">Register here !</a>
+        <br>
+        <br>
         <label for="username">Email</label>
         <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
         <label for="password">Password</label>
