feat: task assignment control

--- a/templates/task/taskDetail.html.twig
+++ b/templates/task/taskDetail.html.twig
@@ -20,7 +20,6 @@
     }
 </style>
 <div class="container mt-4">
-
     <div class="card shadow-sm">
         <div class="card-body">
 
@@ -131,7 +130,7 @@
                         </form>
                     </a>
                 {% else %}
-                    <p>No subtasks yet.</p>
+                    <p>No subtasks for this one !</p>
                 {% endfor %}
             </div>
 
